corrected dark mode

--- a/src/componets/orders/orders.module.css
+++ b/src/componets/orders/orders.module.css
@@ -181,6 +181,7 @@ cellhalfWidthOrderRow {
 background-color: white;
 margin-left: 30px;
   transition: background-color 3s, color 3s;
+  width: 100%;
 }
 
 .childOrderDescriptionAndCloseBtn {
